--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
 				<header>
 					<h2>I nostri servizi</h2>
 				</header>
-				<p>Offriamo una vasta gamma di servizi grafici per soddisfare ogni tua esigenza creativa. Creiamo loghi distintivi, locandine accattivanti e ritocchi fotografici professionali. Progettiamo materiali promozionali e realizziamo grafica di alta qualità per la stampa e il web. Siamo specializzati nella creazione di grafiche per presentazioni aziendali e nel montaggio video. Ogni nostro lavoro è pensato per valorizzare la tua immagine e comunicare efficacemente il tuo messaggio. Contattaci per trasformare le tue idee in realtà visive uniche e coinvolgenti.</p>
+				<p>
+					Offriamo una vasta gamma di servizi grafici per soddisfare ogni tua esigenza creativa. Creiamo loghi distintivi, locandine accattivanti e ritocchi fotografici professionali. Progettiamo materiali promozionali e realizziamo grafica di alta qualità per la stampa e il web. Siamo specializzati nella creazione di grafiche per presentazioni aziendali e nel montaggio video. Ogni nostro lavoro è pensato per valorizzare la tua immagine e comunicare efficacemente il tuo messaggio. Contattaci per trasformare le tue idee in realtà visive uniche e coinvolgenti.
+				</p>
 			</div>
 			<div class="image-grid">
 				<a href="#work" class="image-box text-box">Loghi</a>
@@ -61,6 +63,7 @@
 			</div>
 			<a href="#two" class="button style2 down anchored">Next</a>
 		</section>
+		
 		
 		
 		
