--- a/index.html
+++ b/index.html
@@ -36,21 +36,34 @@
 					</header>
 					<p>Benvenuti in <strong>VisualBytes.</strong> Il partner ideale per rendere visibili le vostre visioni</p>
 					<footer>
-						<a href="#one" class="button style2 down">ancora</a>
+						<a href="#two" class="button style2 down">ancora</a>
 					</footer>
 				</div>
 			</section>
+	<!-- Two -->
+	
+    <section id="two" class="main style2 left dark fullscreen">
+        <div class="content box style2">
+            <header>
+                <h2>I nostri servizi</h2>
+            </header>
+            <p>Offriamo una vasta gamma di servizi grafici per soddisfare ogni tua esigenza creativa. Creiamo loghi distintivi, locandine accattivanti e ritocchi fotografici professionali. Progettiamo materiali promozionali e realizziamo grafica di alta qualità per la stampa e il web. Siamo specializzati nella creazione di grafiche per presentazioni aziendali e nel montaggio video. Ogni nostro lavoro è pensato per valorizzare la tua immagine e comunicare efficacemente il tuo messaggio. Contattaci per trasformare le tue idee in realtà visive uniche e coinvolgenti.</p>
+        </div>
+        <a href="#quattro" class="button style2 down anchored">Next</a>
+    </section>
 
+    <section id="quattro" class="main style2 right dark fullscreen">
+        <div class="content box style2">
+            <header>
+                <h2>I nostri servizi</h2>
+            </header>
+            <p>Offriamo una vasta gamma di servizi grafici per soddisfare ogni tua esigenza creativa. Creiamo loghi distintivi, locandine accattivanti e ritocchi fotografici professionali. Progettiamo materiali promozionali e realizziamo grafica di alta qualità per la stampa e il web. Siamo specializzati nella creazione di grafiche per presentazioni aziendali e nel montaggio video. Ogni nostro lavoro è pensato per valorizzare la tua immagine e comunicare efficacemente il tuo messaggio. Contattaci per trasformare le tue idee in realtà visive uniche e coinvolgenti.</p>
+        </div>
+        <a href="#one" class="button style2 down anchored">Next</a>
+    </section>
+	
 		<!-- One -->
 		<section id="one" class="main style2 right dark fullscreen">
-			<div class="content box style2">
-				<header>
-					<h2>I nostri servizi</h2>
-				</header>
-				<p>
-					Offriamo una vasta gamma di servizi grafici per soddisfare ogni tua esigenza creativa. Creiamo loghi distintivi, locandine accattivanti e ritocchi fotografici professionali. Progettiamo materiali promozionali e realizziamo grafica di alta qualità per la stampa e il web. Siamo specializzati nella creazione di grafiche per presentazioni aziendali e nel montaggio video. Ogni nostro lavoro è pensato per valorizzare la tua immagine e comunicare efficacemente il tuo messaggio. Contattaci per trasformare le tue idee in realtà visive uniche e coinvolgenti.
-				</p>
-			</div>
 			<div class="image-grid">
 				<a href="#work" class="image-box text-box">Loghi</a>
 				<a href="#work" class="image-box text-box">Locandine</a>
@@ -61,24 +74,9 @@
 				<a href="#work" class="image-box text-box">Grafica per il Web</a>
 				<a href="#work" class="image-box text-box">Grafiche per Presentazioni</a>
 			</div>
-			<a href="#two" class="button style2 down anchored">Next</a>
+			<a href="#work" class="button style2 down anchored">Next</a>
 		</section>
 		
-		
-		
-		
-
-		<!-- Two -->
-			<section id="two" class="main style2 left dark fullscreen">
-				<div class="content box style2">
-					<header>
-						<h2>Chi siamo?</h2>
-					</header>
-					<p>VisualBytes è un team di creativi e professionisti del design impegnato a trasformare le tue idee in realtà con un approccio personalizzato e innovativo. Siamo appassionati di design e ci dedichiamo a costruire un'identità visiva forte e coerente che ti distingua nel mercato. La nostra missione è comunicare efficacemente il valore del tuo brand, raccontando storie uniche e coinvolgenti. Con VisualBytes, la tua immagine prende vita, rendendo ogni progetto un'opera distintiva che rispecchia la tua visione e il tuo messaggio. Siamo qui per aiutarti a emergere sui social media e oltre, con soluzioni creative che catturano l'attenzione e ispirano il tuo pubblico.</p>
-				</div>
-				<a href="#work" class="button style2 down anchored">Next</a>
-			</section>
-
 		<!-- Work -->
 			<section id="work" class="main style3 primary">
 				<div class="content">
