--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
     <section id="two" class="main style2 left dark fullscreen">
         <div class="content box style2">
             <header>
-                <h2>I nostri servizi</h2>
+                <h2>Chi siamo</h2>
             </header>
-            <p>Offriamo una vasta gamma di servizi grafici per soddisfare ogni tua esigenza creativa. Creiamo loghi distintivi, locandine accattivanti e ritocchi fotografici professionali. Progettiamo materiali promozionali e realizziamo grafica di alta qualità per la stampa e il web. Siamo specializzati nella creazione di grafiche per presentazioni aziendali e nel montaggio video. Ogni nostro lavoro è pensato per valorizzare la tua immagine e comunicare efficacemente il tuo messaggio. Contattaci per trasformare le tue idee in realtà visive uniche e coinvolgenti.</p>
+            <p>VisualBytes è un team di creativi e professionisti del design impegnato a trasformare le tue idee in realtà con un approccio personalizzato e innovativo. Siamo appassionati di design e ci dedichiamo a costruire un'identità visiva forte e coerente che ti distingua nel mercato. La nostra missione è comunicare efficacemente il valore del tuo brand, raccontando storie uniche e coinvolgenti. Con VisualBytes, la tua immagine prende vita, rendendo ogni progetto un'opera distintiva che rispecchia la tua visione e il tuo messaggio. Siamo qui per aiutarti a emergere sui social media e oltre, con soluzioni creative che catturano l'attenzione e ispirano il tuo pubblico.</p>
         </div>
         <a href="#quattro" class="button style2 down anchored">Next</a>
     </section>
