--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				</div>
 			</section>
 	<!-- Two -->
-	
+
     <section id="two" class="main style2 left dark fullscreen">
         <div class="content box style2">
             <header>
@@ -61,7 +61,7 @@
         </div>
         <a href="#one" class="button style2 down anchored">Next</a>
     </section>
-	
+
 		<!-- One -->
 		<section id="one" class="main style2 right dark fullscreen">
 			<div class="image-grid">
@@ -76,12 +76,13 @@
 			</div>
 			<a href="#work" class="button style2 down anchored">Next</a>
 		</section>
-		
+
 		<!-- Work -->
 			<section id="work" class="main style3 primary">
 				<div class="content">
 					<header>
 						<h2>Portfolio</h2>
+							<h2>Attualmente in manutenzione...</h2>
 						<p></p>
 					</header>
 
@@ -131,7 +132,7 @@
 				</div>
 			</div>
 		</section>
-		
+
 
 		<!-- Footer -->
 			<footer id="footer">
